Inner page nav logo alignment fix

--- a/_sass/custom/header.scss
+++ b/_sass/custom/header.scss
@@ -419,6 +419,12 @@
       }
     }
 
+    &.inner-page-nav {
+      .nav__logo-secondary {
+        margin-top: 0;
+      }
+    }
+
     .nav {
 
       &__logo {
